# hlx-compiler

./: .gitignore  COPYRIGHT  Cargo.toml  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  PHASE2_TEST_REPORT.md  QUICKSTART.md  README.md  README_AMD.md  corpus.jsonl  install.sh  pyproject.toml  test_corpus.jsonl
_archive/: README.md  hlx_constant_lr_OLD.json  large_corpus.jsonl  requirements.txt  test_logs_python.txt  test_logs_rust.txt
_archive/tests_old/tools/: download_resnet.py
benchmarks/: BENCHMARK_RESULTS.md  benchmark_cuda.py  benchmark_hlx.sh
checkpoints/: training_curve.csv
docs/: CONTRACT_SYSTEM.md  HLXL_SPECIFICATION.md  HLX_SPECIFICATION.md  LANGUAGE_SPECIFICATION.md  PHASE_9_VULKAN_INTEGRATION.md  README.md  TYPE_SYSTEM.md  WIRE_FORMATS.md
documents/: HLX_AMD_Technical_Report.md
examples/: README.md  hello_world.hlxl  matrix_multiply.hlxl
examples/hlx-demo-cube/: determinism_test.py
examples/hlx-demo-cube/contracts/: cube_pipeline.json
hlx_runtime/: shaderdb.py
python/: __init__.py  hlx_lcb_client.py
python/tests/: conftest.py
runtime/hlx_runtime/: README.md  __init__.py  glyphs.py  hlx_ls_runtime.py  hlx_runtime.py  hlxl_ls_runtime.py  hlxl_runtime.py  lc_r_codec.py  lc_t_codec.py
shader/: bias_gradient.glsl  elementwise.glsl  embedding_backward.glsl  gelu_backward.glsl  gemm.glsl  gemm_backward.glsl  layernorm_backward.glsl
src/: README.md  buffer.rs  context.rs  error.rs  gpu_ops.rs  lib.rs  pipeline.rs  shader.rs  validation.rs
src/lcb/: executor.rs  mod.rs  parser.rs  service.rs
tests/: README.md
tools/: hlx_model_compiler.py
(+23 files in other folders)
