[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "hlx_vulkan"
version = "0.1.0"
description = "HLX Vulkan compute backend (Rust + PyO3)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: System :: Hardware :: Symmetric Multi-processing",
]
dependencies = []

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-xdist",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "hlx_vulkan"
